--- a/GrillHouseNNProg/Views/MainScreen.axaml
+++ b/GrillHouseNNProg/Views/MainScreen.axaml
@@ -19,7 +19,7 @@
 			<RowDefinition Height="*" />
 		</Grid.RowDefinitions>
 
-		<ComboBox Margin="5" Grid.Row="0" ItemsSource="{Binding ProductTypes}" Background="White" HorizontalAlignment="Left" Width="250" VerticalAlignment="Center" DisplayMemberBinding="{Binding TypeName}" SelectedItem="{Binding SelectedProductType}" />
+		<ComboBox Margin="5" Grid.Row="0" ItemsSource="{Binding ProductTypes}" Background="White" HorizontalAlignment="Left" Width="200" VerticalAlignment="Center" DisplayMemberBinding="{Binding TypeName}" SelectedItem="{Binding SelectedProductType}" />
 
 		<ScrollViewer Grid.Row="1" VerticalScrollBarVisibility="Auto">
 			<ItemsControl ItemsSource="{Binding Productss}">
@@ -30,12 +30,12 @@
 				</ItemsControl.ItemsPanel>
 				<ItemsControl.ItemTemplate>
 					<DataTemplate>
-						<Border BorderThickness="1" BorderBrush="Gray" Padding="10" Margin="10" CornerRadius="8" Background="#F5F5F5" Height="350">
-							<StackPanel MinHeight="330">
-								<Image Source="{Binding Photo, Converter={StaticResource myImageConverter}}" Width="200" Height="170" Stretch="UniformToFill" />
-								<TextBlock Text="{Binding ProductName}" FontSize="18" FontWeight="Bold" Margin="5,10,5,0" TextAlignment="Center" TextWrapping="Wrap" MaxWidth="220"/>
-								<TextBlock Text="{Binding QuantityInStock}" FontSize="14" Margin="5,5,5,0" TextAlignment="Center" />
-								<TextBlock Text="{Binding Price}" FontSize="14" FontWeight="Bold" Foreground="Green" Margin="5,5,5,10" TextAlignment="Center" />
+						<Border BorderThickness="1" BorderBrush="Gray" Padding="10" Margin="10" CornerRadius="8" Background="#F5F5F5" Height="310">
+							<StackPanel MinHeight="300">
+								<Image Source="{Binding Photo, Converter={StaticResource myImageConverter}}" Width="180" Height="150" Stretch="UniformToFill" />
+								<TextBlock Text="{Binding ProductName}" FontSize="18" FontWeight="Bold" Margin="5" TextAlignment="Left" HorizontalAlignment="Left" TextWrapping="Wrap" MaxWidth="220"/>
+								<TextBlock Text="{Binding QuantityInStock}" FontSize="14" Margin="5" TextAlignment="Left" HorizontalAlignment="Left" />
+								<TextBlock Text="{Binding Price}" FontSize="14" FontWeight="Bold" Foreground="Green" Margin="5" TextAlignment="Left" HorizontalAlignment="Left" />
 							</StackPanel>
 						</Border>
 					</DataTemplate>
