--- a/GrillHouseNNProg/Views/MainScreen.axaml
+++ b/GrillHouseNNProg/Views/MainScreen.axaml
@@ -34,8 +34,10 @@
 							<StackPanel MinHeight="300">
 								<Image Source="{Binding Photo, Converter={StaticResource myImageConverter}}" Width="180" Height="150" Stretch="UniformToFill" />
 								<TextBlock Text="{Binding ProductName}" FontSize="18" FontWeight="Bold" Margin="5" TextAlignment="Left" HorizontalAlignment="Left" TextWrapping="Wrap" MaxWidth="220"/>
-								<TextBlock Text="{Binding QuantityInStock}" FontSize="14" Margin="5" TextAlignment="Left" HorizontalAlignment="Left" />
-								<TextBlock Text="{Binding Price}" FontSize="14" FontWeight="Bold" Foreground="Green" Margin="5" TextAlignment="Left" HorizontalAlignment="Left" />
+								<TextBlock Text="{Binding QuantityInStock, StringFormat='Количество на складе: {0}'}" FontSize="14" Margin="5" TextAlignment="Left" HorizontalAlignment="Left" />
+								<TextBlock Text="{Binding Price, StringFormat='Цена: {0}'}"
+										   FontSize="14" FontWeight="Bold" Foreground="#A7262F" Margin="5"
+										   TextAlignment="Left" HorizontalAlignment="Left" />
 							</StackPanel>
 						</Border>
 					</DataTemplate>
